2006-07-21  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany.schemas.in:
	* data/glade/prefs-dialog.glade:
	* embed/mozilla/mozilla-notifiers.cpp:
	* lib/ephy-prefs.h:
	* src/prefs-dialog.c:

	Add a way to turn off password remembering. Bug #332374.

2006-07-21  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany.schemas.in:
	* data/glade/print.glade:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:
	* lib/ephy-gui.c: (ephy_gui_message_dialog_get_content_box),
	(ephy_gui_message_dialog_set_wrap_mode), (checkbutton_toggled_cb),
	(ephy_gui_connect_checkbutton_to_gconf):
	* lib/ephy-gui.h:

	Add our options in a custom tab in the print dialogue.

2006-07-20  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb),
	(entry_activate_after_cb), (action_activated_after_cb),
	(ephy_location_entry_reset_internal), (ephy_location_entry_reset):

	When resetting the entry also emit user-changed, to restore the original
	URI in the tab's property. Bug #345934.

2006-07-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Force label wrapping.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.4 ===

	* configure.ac:

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-node-view.c:
	(ephy_node_view_selection_changed_cb), (ephy_node_view_remove):

	Work around bug #346662 by not changing selection while removing the
	nodes. Fixes crash with gtk 2.10.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (settings_change_notify),
	(ephy_window_key_press_event):

	Fix for empty menubar accel setting.
	Don't activate insensitive actions, bug #347022.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb),