@@ -1,3 +1,13 @@
+2006-07-22  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/glade/Makefile.am:
+	* data/glade/form-signing-dialog.glade:
+	* embed/mozilla/GeckoFormSigningDialog.cpp:
+	* embed/mozilla/GeckoFormSigningDialog.h:
+	* embed/mozilla/MozRegisterComponents.cpp:
+	
+	Implement nsIFormSigningDialog. Bug #312869.
+
 2006-07-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/epiphany.schemas.in:
